--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@floating-ui/vue": "^1.1.9",
     "@nuxt/fonts": "0.11.4",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@vueuse/nuxt": "13.5.0",
