--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@floating-ui/vue": "^1.1.9",
     "@nuxt/fonts": "0.11.4",
+    "@nuxtjs/i18n": "^10.2.1",
     "@nuxtjs/tailwindcss": "6.14.0",
     "@vueuse/nuxt": "13.5.0",
     "nuxt": "^4.0.0",
